[gd_scene load_steps=9 format=3 uid="uid://dgs68t5c8jjj0"]

[ext_resource type="Script" path="res://scenes/level/level_scene.gd" id="1_4sww3"]
[ext_resource type="PackedScene" uid="uid://bc7fw6ecvwcv6" path="res://scenes/restaurant.tscn" id="1_o5324"]
[ext_resource type="PackedScene" uid="uid://vi5ydb7g6j2x" path="res://nodes/player/player.tscn" id="2_7h5sr"]
[ext_resource type="PackedScene" uid="uid://dswwd02hmgwf" path="res://ui/player_crosshair.tscn" id="3_ejqch"]
[ext_resource type="Script" path="res://nodes/customers/customer_manager.gd" id="4_2v1mk"]
[ext_resource type="PackedScene" uid="uid://jec7d3om6mt1" path="res://nodes/other/game_timer/game_timer.tscn" id="6_x373w"]
[ext_resource type="PackedScene" uid="uid://djyb6e3vby05q" path="res://nodes/other/coin_counter/coin_counter.tscn" id="7_r7b05"]
[ext_resource type="AudioStream" uid="uid://cupxuwbtiqywq" path="res://assets/sounds/level_end_bell.ogg" id="8_mrog8"]

[node name="level_scene" type="Node3D"]
script = ExtResource("1_4sww3")

[node name="Restaurant" parent="." instance=ExtResource("1_o5324")]

[node name="Player" parent="." node_paths=PackedStringArray("stations") instance=ExtResource("2_7h5sr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49219, 2.84348)
stations = [NodePath("../Restaurant/Stations/ServeStation"), NodePath("../Restaurant/Stations/SinkStation"), NodePath("../Restaurant/Stations/FridgeStation"), NodePath("../Restaurant/Stations/OvenStation")]
camera_x_limit = 40

[node name="PlayerCrosshair" parent="." instance=ExtResource("3_ejqch")]

[node name="CustomerManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8)
script = ExtResource("4_2v1mk")

[node name="CustomerSpawnTimer" type="Timer" parent="."]

[node name="GameTimer" parent="." instance=ExtResource("6_x373w")]
offset_left = 33.0
offset_top = 29.0
offset_right = 183.0
offset_bottom = 56.0
time_seconds = 240

[node name="CoinCounter" parent="." instance=ExtResource("7_r7b05")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -130.0
offset_top = 23.0
offset_right = -26.0
offset_bottom = 62.0
grow_horizontal = 0
grow_vertical = 1

[node name="LevelEndSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_mrog8")

[connection signal="customer_satisfied" from="CustomerManager" to="." method="_order_completed"]
[connection signal="timeout" from="CustomerSpawnTimer" to="." method="_spawn_customer"]
[connection signal="timer_finished" from="GameTimer" to="." method="_game_over"]
